// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin addition should fail if you don't own the node 1`] = `
Object {
  "accounts": Object {
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0": Object {
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "balance": 999999999009430n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
    "0x2199c041141afe9e4de9d1900a28c3659538073b": Object {
      "address": "0x2199c041141afe9e4de9d1900a28c3659538073b",
      "balance": 0n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": 0n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "initial_owner",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/__tests__/../scilla/registry.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
        Object {
          "type": "Map (ByStr32) (List (ByStr20))",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Array [
                "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
              ],
            },
          ],
          "vname": "admins",
        },
        Object {
          "type": "Map (ByStr32) (Record)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
          ],
          "vname": "records",
        },
      ],
      "transactions": Array [],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999900992126n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
  ],
  "events": Object {},
  "transactions": Object {
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "1000000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "99007874",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029": Object {
      "ID": "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
      "amount": "0",
      "fromAddr": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [],
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "0",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
  },
}
`;

exports[`admin addition should gracefully fail if it already exists 1`] = `
Object {
  "accounts": Object {
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0": Object {
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "balance": 0n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": 0n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "initial_owner",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/__tests__/../scilla/registry.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
        Object {
          "type": "Map (ByStr32) (List (ByStr20))",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Array [
                "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
                "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
              ],
            },
          ],
          "vname": "admins",
        },
        Object {
          "type": "Map (ByStr32) (Record)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
          ],
          "vname": "records",
        },
      ],
      "transactions": Array [],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999899010744n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
  ],
  "events": Object {
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627": Object {
      "_eventname": "NewAdmin",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr32",
          "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "vname": "node",
        },
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "admin",
        },
      ],
    },
  },
  "transactions": Object {
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "1000000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "99007874",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082": Object {
      "ID": "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [],
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "0",
        "epoch_num": "2",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029": Object {
      "ID": "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
        ],
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "0",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
  },
}
`;

exports[`admin addition should succeed if you own the node 1`] = `
Object {
  "accounts": Object {
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0": Object {
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "balance": 0n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": 0n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "initial_owner",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/__tests__/../scilla/registry.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
        Object {
          "type": "Map (ByStr32) (List (ByStr20))",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Array [
                "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
                "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
              ],
            },
          ],
          "vname": "admins",
        },
        Object {
          "type": "Map (ByStr32) (Record)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
          ],
          "vname": "records",
        },
      ],
      "transactions": Array [],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999900001370n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
  ],
  "events": Object {
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627": Object {
      "_eventname": "NewAdmin",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr32",
          "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "vname": "node",
        },
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "admin",
        },
      ],
    },
  },
  "transactions": Object {
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "1000000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "99007874",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029": Object {
      "ID": "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
        ],
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "0",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
  },
}
`;

exports[`admin removal should fail if you don't own the node 1`] = `
Object {
  "accounts": Object {
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0": Object {
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "balance": 999999999009432n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": 0n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "initial_owner",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/__tests__/../scilla/registry.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
        Object {
          "type": "Map (ByStr32) (List (ByStr20))",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Array [
                "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
              ],
            },
          ],
          "vname": "admins",
        },
        Object {
          "type": "Map (ByStr32) (Record)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
          ],
          "vname": "records",
        },
      ],
      "transactions": Array [],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999900992126n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
  ],
  "events": Object {},
  "transactions": Object {
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627": Object {
      "ID": "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
      "amount": "0",
      "fromAddr": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [],
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "0",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "1000000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "99007874",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
  },
}
`;

exports[`admin removal should gracefully fail an admin if it doesn't exist 1`] = `
Object {
  "accounts": Object {
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0": Object {
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "balance": 0n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": 0n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "initial_owner",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/__tests__/../scilla/registry.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
        Object {
          "type": "Map (ByStr32) (List (ByStr20))",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Array [
                "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
              ],
            },
          ],
          "vname": "admins",
        },
        Object {
          "type": "Map (ByStr32) (Record)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
          ],
          "vname": "records",
        },
      ],
      "transactions": Array [],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999900001556n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
  ],
  "events": Object {},
  "transactions": Object {
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627": Object {
      "ID": "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [],
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "0",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "1000000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "99007874",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
  },
}
`;

exports[`admin removal should remove an admin if you own the node 1`] = `
Object {
  "accounts": Object {
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0": Object {
      "address": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
      "balance": 0n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": 0n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "initial_owner",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/__tests__/../scilla/registry.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
        Object {
          "type": "Map (ByStr32) (List (ByStr20))",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Array [
                "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
              ],
            },
          ],
          "vname": "admins",
        },
        Object {
          "type": "Map (ByStr32) (Record)",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
          ],
          "vname": "records",
        },
      ],
      "transactions": Array [],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999899010498n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
    "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6",
  ],
  "events": Object {
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627": Object {
      "_eventname": "NewAdmin",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr32",
          "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "vname": "node",
        },
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "admin",
        },
      ],
    },
    "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082": Object {
      "_eventname": "RemoveAdmin",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr32",
          "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "vname": "node",
        },
        Object {
          "type": "ByStr20",
          "value": "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c0",
          "vname": "admin",
        },
      ],
    },
  },
  "transactions": Object {
    "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6": Object {
      "ID": "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0xc6a0ee971806205e155c2229b34fb4c60e146da684005e8618cf5b1eb04c3082",
        ],
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "0",
        "epoch_num": "2",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "1000000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "99007874",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029": Object {
      "ID": "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
        ],
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "0",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
  },
}
`;

exports[`admin should be allowed to freely configure nodes 1`] = `
Object {
  "accounts": Object {
    "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8": Object {
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "balance": 0n,
      "code": undefined,
      "init": Array [
        Object {
          "type": "BNum",
          "value": "0",
          "vname": "_creation_block",
        },
        Object {
          "type": "Uint32",
          "value": "0",
          "vname": "_scilla_version",
        },
        Object {
          "type": "ByStr20",
          "value": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
          "vname": "_this_address",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "initial_owner",
        },
      ],
      "input": "/Users/laptop3/ZilliqaNameService/contracts/__tests__/../scilla/registry.scilla",
      "state": Array [
        Object {
          "type": "Uint128",
          "value": "0",
          "vname": "_balance",
        },
        Object {
          "type": "Map (ByStr32) (List (ByStr20))",
          "value": Array [
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Array [
                "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
              ],
            },
          ],
          "vname": "admins",
        },
        Object {
          "type": "Map (ByStr32) (Record)",
          "value": Array [
            Object {
              "key": "0x75d7fb79d628a67a623235349c36992c89624fd6ec37ef5e1f3b9ba2bce1052d",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0xc6a0ee971806205e155c2229b34fb4c60e146da6",
                ],
                "constructor": "Record",
              },
            },
            Object {
              "key": "0x0000000000000000000000000000000000000000000000000000000000000000",
              "val": Object {
                "argtypes": Array [],
                "arguments": Array [
                  "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
                  "0x0000000000000000000000000000000000000000",
                ],
                "constructor": "Record",
              },
            },
          ],
          "vname": "records",
        },
      ],
      "transactions": Array [],
    },
    "0xa56193e39780d268b02bf5d9387179cc7ac9884b": Object {
      "address": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "balance": 999999899010022n,
      "smartContracts": Array [],
      "transactions": Array [],
    },
  },
  "blockNumber": 0,
  "blocks": Array [],
  "currentBlock": Array [
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
    "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3",
  ],
  "events": Object {
    "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6": Object {
      "_eventname": "Configure",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr32",
          "value": "0x75d7fb79d628a67a623235349c36992c89624fd6ec37ef5e1f3b9ba2bce1052d",
          "vname": "node",
        },
        Object {
          "type": "ByStr20",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "owner",
        },
        Object {
          "type": "ByStr20",
          "value": "0xc6a0ee971806205e155c2229b34fb4c60e146da6",
          "vname": "resolver",
        },
      ],
    },
    "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c04e7836a26c52f42241c16b4f": Object {
      "_eventname": "Transfer",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "ByStr32",
          "value": "0x75d7fb79d628a67a623235349c36992c89624fd6ec37ef5e1f3b9ba2bce1052d",
          "vname": "node",
        },
        Object {
          "type": "String",
          "value": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
          "vname": "owner",
        },
      ],
    },
    "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627": Object {
      "_eventname": "NewDomain",
      "address": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "params": Array [
        Object {
          "type": "String",
          "value": "label",
          "vname": "label",
        },
        Object {
          "type": "ByStr32",
          "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
          "vname": "parent",
        },
      ],
    },
  },
  "transactions": Object {
    "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3": Object {
      "ID": "0xb91b1fd99e7c72ffe1c5f71e96c011481f09eb53bde54b2830829f587529b1b3",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0x1055e3f83f380244ae2ba92a2f4b3cc5d0dd814e27954321cee3bf824b5929a6",
        ],
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "0",
        "epoch_num": "2",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
    "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5": Object {
      "ID": "0xc51049598fbdffe2d3edd5aa1210aa9beff32faf27684afa115457a524f414c5",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "1000000",
      "gasPrice": "100",
      "meta": Object {
        "contractAddress": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "99007874",
        "epoch_num": "0",
        "success": true,
      },
      "toAddr": "0x0000000000000000000000000000000000000000",
      "version": "30134273",
    },
    "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029": Object {
      "ID": "0xe28330792789071f66770eb479dd457eaf7e2911f6d2ca94cbe02d6e9a445029",
      "amount": "0",
      "fromAddr": "0xa56193e39780d268b02bf5d9387179cc7ac9884b",
      "gasLimit": "10000",
      "gasPrice": "100",
      "meta": Object {
        "events": Array [
          "0x111b38d3a1ba5fd8917dddfe1a993a4b87e498c04e7836a26c52f42241c16b4f",
          "0x2199c041141afe9e4de9d1900a28c3659538073b66d0eedb53525a3afb142627",
        ],
      },
      "nonce": "NaN",
      "receipt": Object {
        "cumulative_gas": "0",
        "epoch_num": "1",
        "success": true,
      },
      "toAddr": "0x47e7a20867f04c007c2b76e96ec49bf8d9398bd8",
      "version": "30134273",
    },
  },
}
`;
